replace nulls with optional